--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -133,6 +133,7 @@ jobs:
         uses: graalvm/setup-graalvm@v1
         with:
           java-version: '11'
+          distribution: 'graalvm-community'
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - uses: gradle/actions/setup-gradle@v4
@@ -171,6 +172,7 @@ jobs:
         uses: graalvm/setup-graalvm@v1
         with:
           java-version: '11'
+          distribution: 'graalvm-community'
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - uses: gradle/actions/setup-gradle@v4
@@ -208,6 +210,7 @@ jobs:
         uses: graalvm/setup-graalvm@v1
         with:
           java-version: '11'
+          distribution: 'graalvm-community'
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - uses: gradle/actions/setup-gradle@v4
