--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,13 +19,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GH_TOKEN }}
-      - uses: gradle/wrapper-validation-action@v2
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '11'
-      - uses: gradle/actions/setup-gradle@v3
+          java-version: '17'
+      - uses: gradle/actions/setup-gradle@v4
       - name: Set the current release version
         id: release_version
         run: |
@@ -113,7 +112,6 @@ jobs:
         with:
           ref: v${{ needs.build.outputs.release_version }}
           token: ${{ secrets.GH_TOKEN }}
-      - uses: gradle/wrapper-validation-action@v2
       - name: Login
         uses: google-github-actions/setup-gcloud@v0
         with:
@@ -126,8 +124,8 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '11'
-      - uses: gradle/actions/setup-gradle@v3
+          java-version: '17'
+      - uses: gradle/actions/setup-gradle@v4
       - name: Run Tests
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
@@ -163,7 +161,6 @@ jobs:
         with:
           ref: v${{ needs.build.outputs.release_version }}
           token: ${{ secrets.GH_TOKEN }}
-      - uses: gradle/wrapper-validation-action@v2
       - name: Login
         uses: google-github-actions/setup-gcloud@v0
         with:
@@ -176,8 +173,8 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '11'
-      - uses: gradle/actions/setup-gradle@v3
+          java-version: '17'
+      - uses: gradle/actions/setup-gradle@v4
       - name: Run Tests
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
@@ -214,14 +211,14 @@ jobs:
         with:
           ref: v${{ needs.build.outputs.release_version }}
           token: ${{ secrets.GH_TOKEN }}
-      - uses: gradle/wrapper-validation-action@v2
       - name: Setup GraalVM CE
         uses: graalvm/setup-graalvm@v1
         with:
-          version: '21.3.3.1'
-          java-version: '11'
+          java-version: '17'
+          distribution: 'graalvm-community'
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: gradle/actions/setup-gradle@v4
       - name: Build the JAR
         run: ./gradlew grails-cli:shadowJar --no-daemon
       - name: Build Native Image
@@ -258,14 +255,14 @@ jobs:
         with:
           ref: v${{ needs.build.outputs.release_version }}
           token: ${{ secrets.GH_TOKEN }}
-      - uses: gradle/wrapper-validation-action@v2
       - name: Setup GraalVM CE
         uses: graalvm/setup-graalvm@v1
         with:
-          version: '21.3.3.1'
-          java-version: '11'
+          java-version: '17'
+          distribution: 'graalvm-community'
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: gradle/actions/setup-gradle@v4
       - name: Build the JAR
         run: ./gradlew grails-cli:shadowJar --no-daemon
       - name: Build Native Image
@@ -302,15 +299,14 @@ jobs:
         with:
           ref: v${{ needs.build.outputs.release_version }}
           token: ${{ secrets.GH_TOKEN }}
-      - uses: gradle/wrapper-validation-action@v2
       - name: Setup GraalVM CE
         uses: graalvm/setup-graalvm@v1
         with:
-          version: '21.3.3.1'
-          java-version: '11'
+          java-version: '17'
+          distribution: 'graalvm-community'
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: gradle/actions/setup-gradle@v3
+      - uses: gradle/actions/setup-gradle@v4
       - name: Build JAR File
         run: ./gradlew grails-cli:copyShadowJar --no-daemon
       - name: Build Native Image
@@ -354,12 +350,11 @@ jobs:
         with:
           ref: v${{ needs.build.outputs.release_version }}
           token: ${{ secrets.GH_TOKEN }}
-      - uses: gradle/wrapper-validation-action@v2
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '11'
-      - uses: gradle/actions/setup-gradle@v3
+          java-version: '17'
+      - uses: gradle/actions/setup-gradle@v4
       - name: Grails SDK Minor Release
         if: contains(needs.build.outputs.release_version, 'M')
         run: ./gradlew sdkMinorRelease
